<resources>
    <string name="app_name">ScanQRcode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_content">Leitura da NFCe ou NFe</string>
    <string name="description_subtext">Agora você deve realizar a leitura da \nnota fiscal clicando no botão abaixo.</string>
    <string name="description_conf_info">Conferência de informações para pagamento:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="key">Chave:\n</string>
    <string name="value">Valor:</string>
    <string name="chaveNFe">ChaveNFe</string>
    <string name="versao">Versão</string>
    <string name="ambiente">Ambiente</string>
    <string name="idCSC">IdCSC</string>
    <string name="hash">Hash</string>
    <string name="result_not_found">Resultado não encontrado.</string>
    <string name="scan_button">scan button</string>
    <string name="btnClose">Botão de fechar</string>
</resources>